# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
-import tiktokRouter from "./tiktok";
+import videoRouter from "./video";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
-router.use(tiktokRouter);
+router.use(videoRouter);
 
 export default router;
